# ClimateRiskAssessmentTool

./: .env.example  README.md  alembic.ini  climate_risk_assessment_tool.py  pyproject.toml
Core/: health_impact_analysis.py  historical_analysis.py  main.py  model_training.py  recommendations.py
data/: real_time_data.py  sample_data.py
src/: app.py  data_integration.py  model_training.py  risk_scoring.py  visualization.py
src/climate_risk/application/services/: __init__.py  base.py  location_service.py  risk_service.py  weather_service.py
src/climate_risk/config/: settings.py
src/climate_risk/domain/: __init__.py
src/climate_risk/domain/entities/: base.py  location.py  risk.py  weather.py
src/climate_risk/domain/repositories/: __init__.py  base.py
src/climate_risk/infrastructure/database/: __init__.py  init_db.py  models.py  session.py
src/climate_risk/infrastructure/database/migrations/: README.md  env.py  script.py.mako
src/climate_risk/infrastructure/repositories/: __init__.py  base.py  location_repository.py  risk_repository.py  weather_repository.py
src/climate_risk/interfaces/api/: app.py  dependencies.py  exceptions.py  middleware.py  utils.py
src/climate_risk/interfaces/api/middleware/: __init__.py  logging_middleware.py  rate_limiting.py  security_headers.py  versioning.py
src/climate_risk/interfaces/api/routers/: base.py  locations.py  risk.py  weather.py
tests/: test_historical_analysis.py
utils/: config.py  data_utils.py  logging_utils.py
