[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climate_risk"
version = "0.1.0"
description = "Climate Risk Assessment Tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pydantic>=1.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=0.19.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "aiohttp>=3.8.0",
    "numpy>=1.21.0",
    "pandas>=1.4.0",
    "plotly>=5.5.0",
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
    "tensorflow>=2.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.260"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
